--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -10,3 +10,7 @@ main h3 { font-size: 1.6rem;}
 main h4 { font-size: 1.4rem;}
 main h5 { font-size: 1.2rem;}
 main h6 { font-size: 1rem;}
+
+.sl-markdown-content .inline-icon {
+  display: inline;
+}
